# SNRS

./: CMakeLists.txt  README.rst  build.bash
cmake/: snrs-config.in
doc/: CMakeLists.txt
doc/build-fsf/: CMakeLists.txt  GNUmakefile  snrs-build-fsf.rst
doc/build-ltd/: CMakeLists.txt  GNUmakefile  snrs-build-ltd.rst
doc/geometry/: README.rst
doc/geometry/images/: snrs-geom-1.fig
doc/slides_2021-05-10/: GNUmakefile  SW_SNRS_2021-05.tex
doc/slides_2021-05-10/fig/: snrs-2d-mesh-1.fig  snrs-2d-mesh-2.fig  snrs-3d-mesh-1.fig  snrs-3d-mesh-2.fig  snrs-fsf-1.fig
doc/slides_2021-05-10/samples/: geo.conf  vg.conf
programs/: README.rst  snrs-build-fsf.cxx  snrs-build-ltd.cxx  snrsprog1.cxx
resources/config/snemo/demonstrator/geometry/GeometryModels/source_module/realistic/: README.rst  gen_geom_strip_conf.bash  strips_itep_like.geom  strips_itep_like.geom.template
resources/data/: source_strips.data
resources/data/geometry/source_foils/ltd/: ltd_calib_strip14-left_edge.data  ltd_calib_strip15-left_edge.data  ltd_calib_strip20-left_edge.data  ltd_calib_strip21-left_edge.data  ltd_calib_strip22-left_edge.data  ltd_calib_strip23-left_edge.data  ltd_calib_strip24-left_edge.data  ltd_calib_strip25-left_edge.data  ltd_calib_strip26-left_edge.data  ltd_calib_strip27-left_edge.data  ltd_calib_strip28-left_edge.data  ltd_calib_strip3-left_edge.data  ltd_calib_strip31-left_edge.data  ltd_calib_strip32-left_edge.data  ltd_calib_strip33-left_edge.data  ltd_calib_strip34-left_edge.data  ltd_calib_strip8-left_edge.data  ltd_calib_strip9-left_edge.data
scripts/: README.rst  build-fsf.bash  build-ltd.bash  common.gp  plot_fsf_strip.gp  plot_ltd_strip.gp  plot_strip_zbands_fit.gp  snBlocks.gp  snStrips.gp
snrs/: array_smoother.cpp  array_smoother.hpp  config.hpp.in  foil_shaping.cpp  foil_shaping.hpp  fsfs.cpp  fsfs.hpp  initfini.cpp  ltd.cpp  ltd.hpp  mesh_pad_model.cpp  mesh_pad_model.hpp  mesh_pad_vg.cpp  mesh_pad_vg.hpp  pad.cpp  pad.hpp  pad_tessellation.cpp  pad_tessellation.hpp  random.cpp  random.hpp  sngeom.cpp  sngeom.hpp  snrs.cpp  snrs.hpp  vertex3d.cpp  vertex3d.hpp  vertex3d_id.cpp  vertex3d_id.hpp
snrs/test/: CMakeLists.txt  README.rst  test-fsfs.cxx  test-fss.cxx  test-geomgr.bash  test-ltd.cxx  test-mesh_pad_model.cxx  test-mesh_pad_vg.cxx  test-mesh_pad_vg_mgr.cxx  test-pad.cxx  test-pad_tessellation.cxx  test-sngeom.cxx  test-snrs.cxx
snrs/test/config/: .#categories.lis  README.rst  categories.conf  categories.lis  geom.lis  geometry_manager.conf  mesh_pad_vg.conf  mesh_pad_vg2.conf  setup.geom  source_vg.conf  vg_mgr.conf
tools/: build.bash
